--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "mongodb": "^4.13.0",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
